--- a/Src/QualificationTask.csproj
+++ b/Src/QualificationTask.csproj
@@ -52,6 +52,7 @@
     <Compile Include="Extensions\Helpers.cs" />
     <Compile Include="IndexGenerator.cs" />
     <Compile Include="Model\Server.cs" />
+    <Compile Include="Model\UnavailableCell.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <None Include="Samples\sample.in">
