--- a/Src/App.config
+++ b/Src/App.config
@@ -3,4 +3,9 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
     </startup>
+
+  <appSettings>
+    <add key="Sample" value="Samples/dc.in" />
+  </appSettings>
+  
 </configuration>
