--- a/Src/QualificationTask.csproj
+++ b/Src/QualificationTask.csproj
@@ -48,9 +48,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataModel.cs" />
+    <Compile Include="Model\DataModel.cs" />
     <Compile Include="Extensions\StreamReaderExtensions.cs" />
-    <Compile Include="IndexGenerator.cs" />
+    <Compile Include="Utils\IndexGenerator.cs" />
     <Compile Include="Model\Group.cs" />
     <Compile Include="Model\Server.cs" />
     <Compile Include="Model\UnavailableCell.cs" />
